--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "Backend para la aplicación sis_seg_retail",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
     "mysql2": "^3.11.3",
